--- a/AndroidSlidingDrawer/AnimationDrawer/Resources/layout/Main.axml
+++ b/AndroidSlidingDrawer/AnimationDrawer/Resources/layout/Main.axml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:text="@string/open"
         android:layout_centerInParent="true"
-        android:visibility="gone" />
+        android:visibility="visible" />
     <AnimationDrawer.MultiDirectionSlidingDrawer xmlns:my="http://schemas.android.com/apk/res/AnimationDrawer.AnimationDrawer"
         android:id="@+id/drawer"
         my:direction="topToBottom"
